<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/yellow"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context="com.example.android.contadortejo.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:text="@string/TeamA"
                    style="@style/TeamName" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/mechaS"
                        style="@style/CounterTitles"/>

                    <TextView
                        android:text="@string/manoS"
                        style="@style/CounterTitles" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/team_a_scoreMe"
                        android:text="0"
                        style="@style/Counter" />

                    <TextView
                        android:id="@+id/team_a_scoreMa"
                        android:text="0"
                        style="@style/Counter"/>
                </LinearLayout>

                <Button
                    android:id="@+id/test"
                    style="@style/button"
                    android:onClick="threeMechasTeamA"
                    android:text="@string/monona" />

                <Button
                    style="@style/button"
                    android:onClick="twoMechasTeamA"
                    android:text="@string/embocinada" />

                <Button
                    style="@style/button"
                    android:onClick="mechaTeamA"
                    android:text="@string/mecha" />

                <Button
                    style="@style/button"
                    android:onClick="manoTeamA"
                    android:text="@string/mano" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button"
                        style="@style/AdjustButtons"
                        android:onClick="adjusmentMeTeamA"
                        android:text="@string/adjustMe" />

                    <Button
                        android:id="@+id/button1"
                        style="@style/AdjustButtons"
                        android:onClick="adjusmentMaTeamA"
                        android:text="@string/adjustMa" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:text="@string/TeamB"
                    style="@style/TeamName" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/mechaS"
                        style="@style/CounterTitles" />

                    <TextView
                        android:text="@string/manoS"
                        style="@style/CounterTitles"  />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/team_b_scoreMe"
                        android:text="0"
                        style="@style/Counter"/>

                    <TextView
                        android:id="@+id/team_b_scoreMa"
                        android:text="0"
                        style="@style/Counter"/>
                </LinearLayout>

                <Button
                    style="@style/button"
                    android:onClick="threeMechasTeamB"
                    android:text="@string/monona" />

                <Button
                    style="@style/button"
                    android:onClick="twoMechasTeamB"
                    android:text="@string/embocinada" />

                <Button
                    style="@style/button"
                    android:onClick="mechaTeamB"
                    android:text="@string/mecha" />

                <Button
                    style="@style/button"
                    android:onClick="manoTeamB"
                    android:text="@string/mano" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:onClick="adjusmentMeTeamB"
                        android:text="@string/adjustMe"
                        style="@style/AdjustButtons" />

                    <Button
                        style="@style/AdjustButtons"
                        android:onClick="adjusmentMaTeamB"
                        android:text="@string/adjustMa" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:background="@color/red"
            android:onClick="reset"
            android:text="@string/reset"
            android:textAllCaps="true" />
    </RelativeLayout>

</ScrollView>